--- a/pipeline/package.json
+++ b/pipeline/package.json
@@ -15,6 +15,7 @@
     "fs-extra": "^4.0.0",
     "google-play-scraper": "^6.1.0",
     "minimist": "^1.2.0",
+    "nodemailer": "^6.4.2",
     "pg": "^6.4.0",
     "request": "^2.87.0"
   }
