Update example credentials

--- a/pipeline/config/example_credentials.conf
+++ b/pipeline/config/example_credentials.conf
@@ -1,13 +1,16 @@
 [Credentials]
-gmail_address=email@example
-gmail_password=example
-#keyring_service=gplaycli
-android_ID=3d716411bf8bc802
-language=fr_FR
 token=True
-token_url=https://matlink.fr/token/email/gsfid
-#https://matlink.fr/token/email/gplaycliacc@gmail.com
-retries=10
+token_url=http://localhost:8080
+
+[Locale]
+locale=en_GB
+timezone=CEST
 
 [Cache]
-token=~/.cache/gplaycli/token
+token=/etc/xray/token.json
+
+[Misc]
+progress=True
+verbose=True
+append_version=False
+enable_logging=True
