New trackers, add exodus analysis, cleanup

--- a/pipeline/config/example_config.json
+++ b/pipeline/config/example_config.json
@@ -44,7 +44,8 @@
         "db": {
             "user": "analyzer",
             "password": ""
-        }
+        },
+        "exodus_path": "~/exodus-standalone/exodus_analyze.py"
     },
     "apiserv": {
         "db": {
