--- a/pipeline/package.json
+++ b/pipeline/package.json
@@ -9,16 +9,17 @@
   "author": "SOCIAM",
   "license": "BSD",
   "dependencies": {
-    "bluebird": "^3.5.0",
+    "app-store-scraper": "^0.17.0",
+    "bluebird": "^3.7.2",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "^2.2.1",
-    "fs-extra": "^4.0.0",
-    "google-play-scraper": "^7.1.1",
-    "minimist": "^1.2.0",
-    "nodemailer": "^6.4.2",
-    "pg": "^6.4.0",
-    "request": "^2.87.0",
-    "simple-plist": "^1.1.0",
-    "unzipper": "^0.10.8"
+    "fs-extra": "^4.0.3",
+    "google-play-scraper": "^7.1.3",
+    "minimist": "^1.2.6",
+    "nodemailer": "^6.7.5",
+    "pg": "^8.7.3",
+    "request": "^2.88.2",
+    "simple-plist": "^1.3.1",
+    "unzipper": "^0.10.11"
   }
 }
